add addition html pages and images to site.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <p>"I went to Roger's Party Island and I met so many new friends I can't even keep up with them all; I also rode a dolphin!" -Sarah</p>
 
     <ul>Check out all this information about the Island and Come Visit Us:
-      <li>Accommodations</li>
-      <li>Activities</li>
-      <li>Travel Arrangements</li>
-      <li>Pictures, etc.</li>
-      <li>Contact Information</li>
+      <li><a href="accommodation.html" target="_blank">Accommodations</a></li>
+      <li><a href="activities.html" target="_blank">Activities</a></li>
+      <li><a href="travel.html" target="_blank">Travel Arrangements</a></li>
+      <li><a href="pictures.html" target="_blank">Pictures, etc.</a></li>
+      <li><a href="contact.html" target="_blank">Contact Information</a></li>
     </ul>
 
   </body>
