--- a/travel.html
+++ b/travel.html
@@ -8,10 +8,10 @@
     <h1>Roger's Travel Arrangements</h1>
     <small>Roger's Fun Time does not take responsibility for your travel arrangements.</small>
     <h2>Air</h2>
-    <img src="oldplane.jpg" alt="Not recommended">
+    <img src="img/oldplane.jpg" alt="Not recommended">
     <p>We recommend taking a plane. Hot air balloons are also acceptable.</p>
     <h2>Sea</h2>
-    <img src="paddleboard.jpg" alt="Watch out for sharks">
+    <img src="img/paddleboard.jpg" alt="Watch out for sharks">
     <p>Paddling to Roger's island is a long trip, but can be done. Please avoid the Bermuda triangle. Otherwise, find the nearest port and stick your thumb out. You'll make it eventually.</p>
     <img src="img/cartoonpig.jpg" alt="cartoon pig">
 
