linked stylesheet to html pages

--- a/travel.html
+++ b/travel.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Roger's Travel Arrangements</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
