--- a/activities.html
+++ b/activities.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Roger's Activities</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
