--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Contact Roger</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
