--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Roger's Funtime Island Party Zone</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
