fix contact image

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,6 @@
     <h1>Contact Roger</h1>
     <p>For business related inquiries, please email <a href="mailto:pigfun@gmail.com">pigfun@gmail.com</a> or call 1-800-PIGFUN</p>
     <p>If you would like to visit us in person, we are located at:<span>1 Fun Drive, Roger Island, Bahamas 90210</span></p>
-    <img src="pigtelephone.jpg" alt="Pig telephone">
+    <img src="img/pigtelephone.jpg" alt="Pig telephone">
   </body>
 </html>
